# RealTimeFiltering

./: .gitignore  CMakeLists.txt  README.md
Project1/: CMakeLists.txt  DA2Network.hpp  da2-example.cpp  da2-video.cpp  faceDetect.cpp  faceDetect.h  filters.cpp  filters.h  imgDisplay.cpp  vidDisplay.cpp
Project2/: CMakeLists.txt  README.md  cbir_app.py  features.cpp  features.h  main.cpp  readfiles.cpp
Project3/: CMakeLists.txt
Project4/: CMakeLists.txt
